--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+body{
+  background-color: #333;
+  color: white;
+}
+button{
+  padding: 1em;
+  background-color: #666;
+  color: white;
+  border-radius: 5px;
+}
+textarea{
+  padding: 1em;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
 .mainContainer {
   display: flex;
   justify-content: center;
@@ -19,9 +37,9 @@
 }
 
 .bio {
-  text-align: center;
-  color: gray;
   margin-top: 16px;
+  color: #CCC;
+  text-align: center;
 }
 
 .waveButton {
@@ -30,5 +48,19 @@
   padding: 8px;
   border: 0;
   border-radius: 5px;
-  
+}
+
+.messageArea{
+  margin-top: 16px;
+}
+
+.wave{
+  margin-top: 30px;
+  padding: 1em;
+  background-color: #222222;
+  font-size: 0.9em;
+  line-height: 1.5;
+}
+.wave + .wave{
+  margin-top: 8px;
 }
